--- a/_ja/メンデルの法則 2.md
+++ b/_ja/メンデルの法則 2.md
@@ -21,14 +21,24 @@ layout: post
 
 ![300](https://c8.alamy.com/comp/AF60KF/green-smooth-and-wrinkled-pea-seeds-traits-gregor-mendel-studied-in-AF60KF.jpg)
 
+> [! summary]
+> - メンデルの法則は対立形質しか説明していない。
+> - この事実はメンデルの法則を、有効範囲の狭いつまらない法則のように見せている。だけど実際には、この事実はメンデルの偉大さを表すものだ。
+> - 混合説の矛盾から萌芽した粒子説を理論的に発展させていくと、分離の法則が導出される
+> - エンドウが示す対立形質を粒子説で説明しようと試みると、優性・独立の法則が導出(仮定)され、実験デザインが完成する
+> - メンデルの法則は、抽象的な遺伝子概念を導入しただけだ。遺伝子の実体は、そののち、モーガン、ワトソン・クリックの発見で実証されていく。
+> - メンデルはドルトンの原子説からアイデアを得たのかもしれない。
+
+## メンデルの法則は質的形質しか説明できない
 
 メンデルの法則って覚えている？
 
-エンドウ豆のシワとか、花の色とか、そういう話。(これに付随して、メンデルという名の司教が庭でエンドウを育てた話とか、F1やF2といった言葉が頭に浮かぶかもしれない)
+- エンドウ豆のシワとか、花の色とか、そういう話。(これに付随して、メンデルという名の司教が庭でエンドウを育てた話とか、F1やF2といった言葉が頭に浮かぶかもしれない) 
+- エンドウ豆のシワとか、花の色とか、F2とか、そういう話。(もちろん、分離の法則とか優性の法則を思い出してくれてもいい！これらの法則の詳細は後でやるので気にせずに) 
 
 ひとまずは、どのように遺伝が起きるかを説明する法則だったことを思い出してくれればいい。
 
-でもエンドウ豆のことに、真剣に価値を見いだせる人は少ないと思う。どうして教科書はメンデルの法則を説明するときに、そんなトリビアルな例を挙げるんだろう？もっと重要でハッとさせるようなものでメンデルの法則を説明してくれたら、楽しめるかもしれないのに。。
+でもエンドウ豆のことに、真剣に価値を見いだせる人って少なくない？どうして教科書はメンデルの法則を説明するときに、そんなトリビアルな例を挙げるんだろう？もっと重要でハッとさせるようなものでメンデルの法則を説明してくれたら、楽しめるかもしれないのに。。
 
 これには、メンデルがこの法則を発見するためにエンドウを用いたということも、もちろん関係している。けれど、もっと大きな理由はメンデルの法則それ自体で説明できる事例にあまり面白いものがないということだ[^1]。多分、メンデル以外に見たことがある例と言えば、(TODO: ほかの例 ショウジョウバエやヒトに関して当てはまる例など)
 
@@ -40,6 +50,8 @@ layout: post
 
 じゃあ、どうしてメンデルの法則は教科書に載っていて、皆が学ばなくてはいけないことなのだろう？質的形質という誰も興味が持てないものしか説明できない法則なのに。
 
+## メンデルの法則の法則の2通りの味わい方
+
 この疑問に対する答えは2通りある。
 
 1. メンデルの法則は、それ自体が重要な結果、というわけではない。だから、メンデルの法則単体では、あまりおもしろい事実を説明できていなくてもいい。メンデルの法則の本当の価値は、*ある主張*を実証していることにある。
@@ -47,7 +59,7 @@ layout: post
 
 2.については別のポストで詳しく書いたので、ここでは1.の観点からメンデルの法則を考え、その本当の価値を提示したい。最後まで読めば、①の事実が、メンデルの法則をつまらないものにするどころか、メンデルの偉大さを表していることが理解できると思う。
 
-## メンデルの法則は粒子説から導かれ、粒子説を実証する
+## 混合説の矛盾から粒子説の萌芽まで
 
 まずは、*ある主張*とは何かについて説明しよう。そのためには、メンデルが生きた時代に一般的だった遺伝に関する考えを説明したほうがいいと思う。
 
@@ -56,6 +68,8 @@ layout: post
 そして、メンデルの時代には、遺伝が起きるメカニズムは、父と母それぞれから、形質を決めるどろどろの何か(これが遺伝子ということになる)が提出され、2つが混じり合うことで、子の遺伝子となり、子の形質が決まる、というのが一般常識だった。
 
 つまり、遺伝子というのは、水やヨーグルトのようなもので、父由来と母由来のものが混合されて、子に渡される、という考え方だ。これを混合説という。
+
+[TODO:図 Done blending-model]
 
 この説が正しいなら、
 
@@ -73,21 +87,49 @@ layout: post
 
 以上のように、混合説は隔世遺伝のように日常で見られる事象が説明できないことに加えて、進化論ともうまく噛み合わせることができなかった。
 
-隔世遺伝を説明するためには、祖父の遺伝子が父のなかにも残っていて、子供にそれが渡されたと考えるのが自然だ。そこで、遺伝子はどろどろのものではなく、しっかりした実体をもった小さな粒のようなものであり、それ自体は変化すること無く子供に渡されると考えてみよう。これは粒子説と呼ばれる。
+もし、混合説が間違っているのなら、遺伝子はどろどろのものではなく、しっかりした実体をもった小さな粒のようなものであり、それ自体は変化すること無く子供に渡されると考えてみたらどうだろうか？これは粒子説と呼ばれる。
 
-この粒はいくつ持っているべきだろうか？もし1つなら、子供にそれがそのまま渡されることになるので、クローン人間になる(両親から1つずつ渡されて子供と親の個数が合わなくなるのも問題だ)。実際、この粒はある程度たくさん持っているだろう。いくつであっても、子には父と母から同じ個数(N個としよう)ずつ渡されるはずだから、子が持つのは2N個になる。子は両親と同じだけ粒を持っているはずだから、両親も2N個もっていて、子には、その半分を渡したことになる。
+粒子説であれば、隔世遺伝は、祖父の遺伝子が父のなかにも残っていて、子供にそれが渡されたと考えれば説明できそうだ。
 
-半分を渡す、と簡単に言ったが、例えば2N=10000だとして、10000個のボールが散らかっているような状態で遺伝子が存在しているのなら、どうやって半分の5000個をきっちり子供に渡せば良いのだろう？
+しかし、粒子説は進化論が要請するような種の多様性を確保できるのか？遺伝子が変化しなかったら、親と子は全く同じになってしまわないか？直観的にはそう思うかもしれない。ひとまずは、もし粒子説が正しいなら事態はどうなっているはずかを考えていくことにしよう。[^私達は粒子説が正しいと知っているから突き進むことができるけれどメンデルが進むことができたのはどうしてだろう？もしかしたらドルトンの原子説を参考にしたのかもしれない]
 
-この問題を解決するには、2個を1ペアにしてN個のペアを作れば良い。そうしてペアのうち、どちらかを子に渡す、ということにしておけば、5000まで数を数える必要はなくなる。生物が適応していくことを考えると、このくらい効率の良い方法に長い歴史の中で至ったと考えてもおかしくないだろう。(なんども繰り返すけれど、メンデルの前にダーウィンの進化論はすでに知られていた！)
+## 粒子説をrefineしていこう！
 
-これで万事OK?NO! 例えば、青色の粒子が花の色を決めるのに関係しているとしよう。そして、この生物はこの粒子を1つだけもっているとする。そうすれば、父と母のどちらかから、きっちり1つだけ、この粒子をもらわなくてはいけない。けれど、次の図のように、子供には一つも受け継がれなかったり、逆に花の色を決める粒子が2つ引き継がれてしまうことがあり得る。この問題は花の色を決める粒子が2つでも3つでも同じように生じる。
+### まずは分離の法則まで
 
-これは非常に難しい問題のように見えるけれど、シンプルな解決法がある。それは、2個1ペアが、花の色を決めるのに関係している、と考えればいいのだ。そうすれば、父と母から必ず、ペアのうちどちらか1個がもらえるので、子供は必ず2個1ペアを持つことになる。
+粒子説では、遺伝子はそれ自体が変化しない粒子だ。では、この粒子を生物はいくつ持っているべきだろう？
+
+もし1つだけしか持っていないのなら、(混合説と違って)それが子供に変化しないで引き渡されるので、種の多様性がどう確保されるのか説明が難しくなりそうだ。
+
+実際、この粒はある程度たくさん持っているだろう。いくつ持っていたとしても、子には父と母から同じ個数(N個としよう)ずつ渡されるはず[^もちろん、父からN+1個で母からN-1個のような可能性も考えられるけれど、もっともシンプルなシナリオでは、ということ。以下も同様で、もっともシンプルに事が進むとこうなるはず、というふうに話を進めていく。]だから、子が持つのは2N個になる[^ここでも子供は親から貰ったものを少し捨てて実際には2N-2個しか持っていないかもしれないとかいろいろな可能性が考えられるけどね。あくまでシンプルシナリオ。]。両親は子と同じだけ粒子を持っているはず[^だって、もし子どものほうが数が多いなら世代を経るごとに持っている粒子の数が多くなっていくし、もし子どものほうが数が少ないなら世代を経るといずれ粒子が何もなくなるでしょ。もちろん、これについても再反論はできるよ。考えてみて。]だから、両親も2N個もっていたということだ。であれば、子には自分がもつ半分の粒子を渡したことになる。
+
+[TODO:図 Done parents-child-have-2N-ge]
+
+半分の粒子を渡す、と簡単に言うけれど、例えば2N=10000だとして、10000個のボールが散らかっているような状態で遺伝子が存在しているのなら、どうやって半分の5000個をきっちり子供に渡せば良いのだろう？
+
+[TODO:図 many-genes-messy]
+
+この問題を解決するには、2個を1ペアにしてN個のペアを作れば良い。そうして2個1ペアのうち、どちらか1個を子に渡す、ということにしておけば、たくさんの数を数える必要はなくなる。
+
+[TODO:図 6-N-pairs-gene-unpaired]
+
+生物が適応していくことを考えると、このくらい効率の良い方法に長い歴史の中で至ったと考えてもおかしくないだろう。(なんども繰り返すけれど、メンデルの前にダーウィンの進化論はすでに知られていた！)
+
+これで子供に粒子を渡す問題は解決した?まだだ! 
+
+例えば、青色の粒子が花の色を決めるのに関係しているとしよう。そして、この生物はこの粒子を1つだけもっているとする。そうすれば、父と母のどちらかから、きっちり1つだけ、この粒子をもらわなくてはいけない。けれど、次の図のように、子供には一つも受け継がれなかったり、逆に花の色を決める粒子が2つ引き継がれてしまうことがあり得る。この問題は花の色を決める粒子が2つでも3つでも同じように生じる。
+
+[TODO:図 7-N-pairs-gene-unrelated-missing]
+
+これは非常に難しい問題のように見えるけれど、シンプルな解決法がある。それは、2個の粒子が1つのペアとなって働き、花の色を決めるのに関係している、と考えればいいのだ。そうすれば、子供は父と母それぞれからペアの1個をもらえるので、これがまたペアとなることで、子供は必ず花の色を決める2個1ペアを1つだけを持つことになる。
+
+[TODO:図 8-N-pairs-gene-paired]
 
 こう考えると、個体の多様性がどう出てくるのかも理解し始める。前の図で、父・母・子が持っている粒子のペアは異なっている。このようにペアを構成する粒子の組み合わせが個体ごとに違うことで個性が現れているのだろう。
 
-現代的な言葉では、ペアを遺伝子と呼び、粒子をアレル(対立遺伝子)と呼ぶので、今後はそう呼ぶことにしよう。この言葉を使えば、親から子へは2つのアレルのうち、1つのアレルが渡されるということになる。これがメンデルの3法則のうち、分離の法則である。
+現代的な言葉では、2個1ペアの粒子を遺伝子と呼び、粒子1つずつをアレル(対立遺伝子)と呼ぶ。この言葉を使えば、親がもつ2つのアレルのうち、1つのアレルが子供へ渡されるということになる。これがメンデルの3法則のうち、分離の法則だ。粒子説から何の実験もしないで分離の法則を導くことができてしまった！
+
+### エンドウの対立形質を説明したい！
 
 ここまでの結果は粒子説をもとに進化的に最適と思われる方法を考えることで導かれた。しかし、このままでは机上の空論で、これが正しいことを実験により証明しなければならない。
 
@@ -96,79 +138,124 @@ layout: post
 - エンドウが、豆のしわ・スムーズ/ など、コインの裏表のように2つの表現型しかもたない形質(これを質的形質のなかでも対立形質という)をいくつも持っていること
 - そしてそれらの形質が隔世遺伝すること
 
-が知られていた(のかもしれない)。
+が知られていた(TODO: のかもしれない?)。
 
-現実世界でエンドウが示す対立形質の振る舞いを我々が理論的に導いた結果から説明できるだろうか？もしできるなら、エンドウを使った実験をデザインすることで、我々の理論が証明できるはずだ！
+エンドウが示す対立形質の振る舞いを、我々の粒子説で説明できるだろうか？もしできるなら、エンドウを使った実験で、我々の理論が証明できるかもしれない！
 
-まず、これらの対立形質はいくつの遺伝子に影響を受けるのだろうか？1つの遺伝子で決まるのか？複数の遺伝子で決まるのか？
-[図 1つの遺伝子から1つの形質に矢印 複数の遺伝子から1つの形質に矢印]
+#### 形質・遺伝子の1対1対応
 
-しかし、複数の対立形質に同時に影響を与える遺伝子が存在するかもしれない？
-[図X 1つの遺伝子から複数の形質に矢印]
+まず、エンドウがもつこれらの対立形質はいくつの遺伝子に影響を受けるのだろうか？1つの遺伝子で決まるのか？
+
+[TODO:図 9a-1gene-1phenotype]
+
+もしくは複数の遺伝子で決まる対立形質もあるのか？
+
+[TODO:図 9b-many-gene-1phenotype]
+
+あるいは、複数の対立形質に同時に影響を与える遺伝子も存在するかもしれない？
+[TODO:図 9c-many-gene-1phenotype]
 
 Maybe... だから、現実はこうかもしれない。
-[図 複数の遺伝子から複数の形質に矢印]
+[TODO:図 9d-many-gene-many-phenotype]
 
-しかし、今は現実のすべての側面を見たいわけではない。一般解をいきなり求めようとしても無意味なことだ。もっともシンプルな場合には、どうなっているかを考えよう。
+しかし、今は現実のすべての側面を見たいわけではない。一般解をいきなり求めようとしても失敗するだけだろう。もっともシンプルな場合には、どうなっているかを考えよう。
 
-しかし、対立形質のように2つの値しか取らないものを決めるのに、何個も遺伝子を使うのは効率の悪い馬鹿げた方法だ。なぜなら、2つの値を決めるには、1つの遺伝子と2種類のアレルで十分だからだ。
-[図 写真に取ったような、n gene with m alleleでいくつの表現型をとりうるか]
+そもそも、対立形質のように2つの値しか取らないものを決めるのに、何個も遺伝子を使うのは効率の悪い馬鹿げた方法だ。なぜなら、2つの値を決めるには、1つの遺伝子と2種類のアレルで十分だからだ。
+[TODO:図 10-n-gene-m-alleles]
 
-だから、進化がもっとも効率良い方法にたどり着いていれば[^これはallといういみではなくsomeといういみで] 、2つのアレルだけをもつ1つの遺伝子で形質が決まることになる。
+だから、進化がもっとも効率良い方法にたどり着いていれば、2つのアレルだけをもつ1つの遺伝子で形質が決まることになる。もちろん、これはallという意味ではなくsomeという意味で。対立形質をもつ全ての生物が、1gene2alleleという最も効率的な方法で決めているという主張ではなく、ある・いくつかの生物は1gene2alleleで決めていてもおかしくないだろうという推論。たとえば賢いエンドウ君とかがそうしているかもしれないよね。
 
-そして、図Xのように複数の形質に影響を及ぼす遺伝子がないシンプルな状況を考えることにする。
-
-そうすれば、もっともシンプルな場合には、こうなっているはずだ。
-[図 1つの遺伝子から1つの形質]
+そうすれば、もっともシンプルな場合には、こうなっているはずだ。(複数の形質に影響を及ぼす遺伝子もないとした)
+[TODO:図 9a-1gene-1phenotype]
 
 繰り返すが、遺伝子と形質の関係が*always*こうなっていると主張しているわけではない。In *some* simple situations, これが成り立っている生物がいてもおかしくはないということだ。
 
-そして、エンドウはそのような植物かもしれない！
+- たとえば賢くてミニマリストのエンドウ君とかね！
+- そして、エンドウはそのような植物かもしれない！
 
-実験をデザインするためには、あとさらに2つの仮定が必要になる。そしてそれが、優性の法則と独立の法則だ。
+#### 残り2つの仮定(優性・独立性)
 
-まず、1 gene with 2 alleleでは3つの表現型がとれてしまう。現実には2つの表現型しか取らないわけだから、余分な情報を圧縮しなければならない。Aはしわを表現するアレルでaがスムーズを表現するアレルなら、AA,aaがそれぞれしわ、スムーズなのは動かしようがない。あとは、Aaが、しわかスムーズのどっちかになっているはずだ。これが優性の法則。
+- 僕たちはだいぶ良いところまで来たけれど、実験をデザインするためには、あとさらに2つの仮定が必要になる。そしてそれが、優性の法則と独立の法則だ。
+- 僕たちはだいぶ良いところまで来たけれど、実験をデザインするためには、もう少し考えることがある。
 
-そして、もう一つ気づきづらい仮定がある。それは、各アレルを子供にわたす際に、どちらのアレルが渡されるかは、遺伝子ごとに独立なのかということだ。例えば、次のような遺伝子をもつ父親がいて、1/2の確率で、父親からAの粒子が渡された場合、次のB or bのどちらが渡されるかも1/2なのだろうか？もしくは、Aが選ばれた場合には、Bがより選ばれやすくなるということはあるのだろうか？
+まず、1 gene with 2 alleleではAA,Aa,aaで最大3つの表現型を表せてしまう。現実には2つの表現型しか取らないわけだから、余分な情報を圧縮しなければならない。例えばAがしわを表現するアレルで、aがスムーズを表現するアレルとすれば、AA,aaがそれぞれしわ、スムーズなのは確定だ。あとは、Aaが、しわかスムーズのどっちかになっているはずだ。もしAのほうが強ければ、Aaはしわ、aのほうが強ければ、Aaはスムーズ。これって優性の法則だよね！
 
-イメージが付きづらければトランプで考えよう。トランプの山から次々にカードを引いていくことを考えると、はじめの1枚が偶数か奇数かは1/2でいいだろうけど、次からは偶数or奇数は、今までひいたカードが何かに依存して1/2ではない。だから、今まで偶数のカードがたまたまたくさん出てきていれば、次に奇数のカードが出る確率は1/2より大きい！だから奇数にベッドすべきだ！(カウンティングの基本原理 )(TODO: 外部リンクと内部リンクで表示を変える！)
+そして、もう一つ気づきづらい仮定がある。それは、各アレルを子供にわたす際に、どちらのアレルが渡されるかは、遺伝子ごとに独立なのかということ。
 
-そういう複雑な事態が遺伝子にも生じているのだろうか？現実の答えはまたしても、そういう場合もあれば、そうでない場合もある、ということになる。(同じ染色体にのっているかどうかということだ。 参照: 連鎖。ちなみに、この概念は、メンデルの後継者?モーガンが直面して、一度疑心暗鬼になった後に、メンデル信者と化したエピソードに関連していてとても面白い話だ。)
+例えば、次のような遺伝子をもつ父親がいる。Aが渡される確率とaが渡される確率は？シンプルケースでいくなら、どちらも1/2だろう。ここまではいい。
 
-今までと同じように、もっともシンプルなケースを考えよう。つまり、各遺伝子の2つのアレルは全て独立に、全てが1/2の確率でどちらかが子供に渡されるのだと。これが独立の法則だ。
+[TODO:図 11-father-gene]
+
+では、父親からAの粒子が渡された場合、次のB,bのどちらが渡されるかも1/2なのだろうか？もしくは、Aが選ばれた場合には、Bがより選ばれやすくなるということはあるのだろうか？
+
+イメージが付きづらければ、トランプの山から次々にカードを引いていくことを考えよう。はじめの1枚が偶数か奇数かの確率は1/2だけど、次からは今までひいたカードが何かに依存して必ずしも1/2ではない。例えば、今まで偶数のカードがたまたまたくさん出てきていれば、次に奇数のカードが出る確率は1/2より大きい！だから奇数にベッドすべきだ！(カウンティングの基本原理 )(TODO: 外部リンクと内部リンクで表示を変える！)
+
+そういう複雑な事態が遺伝子にも生じているのだろうか？現実の答えはまたしても、そういう場合もあれば、そうでない場合もある、ということになる。現代的な言葉を使えば、AaとBbが同じ染色体上にあれば、2つの遺伝子は連鎖するから、1/2ではない。一方で、もし違う染色体上にあれば、独立で1/2になる。(参照: 連鎖。ちなみに、この概念は、メンデルの後継者?モーガンが直面して、一度疑心暗鬼になった後に、メンデル信者と化したエピソードに関連していてとても面白い話だ。)
+
+どちらのケースを採用するか、分かっているよね？今までと同じように、もっともシンプルなケースを考えよう。つまり、各遺伝子の2つのアレルは全て独立に、全てが1/2の確率でどちらかが子供に渡されるのだと。これが独立の法則だ。(これは調べる形質に対応する遺伝子が全て別々の染色体に存在すれば正しい。現在ではメンデルが調べた7つの形質のうち、(TODO:)。これが幸運なのか、メンデルの意図なのか？)
+
+## ようやく実験だ！
 
 ここまでくれば、実験デザインを考えることができる。[TODO: 実際にメンデルが行った実験は？]
 
-メンデルの実験が成功した理由の1つに純系を作成したことが挙げられる。純系とはAA,aaのような遺伝子型をもったもので、これらは交配させ続けても、常に同じ表現型を示す。
+メンデルの実験が成功した理由の1つに純系を作成したことが挙げられる。純系とはAA,aaのような遺伝子型をもったもので、これらはAA同士,aa同士で交配させ続けても、常に同じ表現型を示す。
 
-これら純系をかけ合わせると、雑種1世代目(F1)は、全てAaとなり、優生の方の性質を示す。そして、F1同士を組み合わせると、AA:Aa:aa = 1:2:1となり、D:R=3:1が現れる。逆にこのような整数比でF1とF2が現れることがメンデルの法則の正しさ、ひいては粒子説を証明することになる。
+そしてAAとaaをかけ合わせると、雑種1世代目(F1)は、全てAaとなり、優性の方の性質を示す。そして、F1同士を組み合わせると、AA:Aa:aa = 1:2:1となり、D:R=3:1が現れる。隔世遺伝のメカニズムを説明するだけでなく、このような整数比でF1とF2が現れることがメンデルの法則の正しさ、ひいては粒子説を証明することになる。
 
-しかし、純系を使わずに単に、優生の性質をもつものと劣勢の性質をもつものたちをかけ合わせても、このような結果は得られない。なぜなら優生のなかにAaが混じっているからだ。
+[TODO:図 openstaxの図を使う ]
 
-こうなるとF1のいくつかは劣勢になりF2に整数比は現れない。それは、粒子説が誤っているのではなく、優性の法則を考慮しない実験デザインに誤りがあるのだ。
+純系を使わずに単に、優生の性質をもつものと劣勢の性質をもつものたちをかけ合わせても、このような結果は得られない。なぜなら優生のなかにAaが混じっているからだ。
+
+[TODO:図 混ざっている図 F1,F2]
+
+こうなるとF1のいくつかは劣性の形質を示し、F2に整数比は現れない。もちろん、粒子説が誤っているのではなく、優性の法則を考慮しない実験デザインに誤りがあるのだけどね。
 
 どうすれば、純系が作れるだろうか？単に同じ形質を示すものを交配し続ければいい。そうすれば、最初はAaが混じっているだろうが、だんだんと集団内でAaの割合は小さくなっていく。完全に取り除くことはできないかもしれないが、仮に100体のうち、1つがAaでも、計算すれば　となり、無視できる。つまり、統計的純系になっているということだ。メンデルの3法則を使えば、最初のAaの割合(これは知ることはできないから仮定する、もっとも多い場合で100%)と、目標とするAaの混在割合をもとに、何回交配すれば、統計的純系を作れるかを数学的に計算できる。[TODO: 実際計算してみてもいいかも]
 
-こうして、純系を作ることから、最終的にF2においてD:R=3:1となるまで、実験を計画できたので、あとは実験して証明することだ！
+[TODO:図 Aaから純系を作るまでを図示]
 
-こうして解釈し直してみると、前に先走って言ったように、 ①の事実はほんとうはメンデルの偉大さを表すものだと思う。
-メンデルはシンプルなケースを意図的に選択したんだ。エンドウという本当に都合のよい植物も選んだ。もし最初から量的形質を考慮に入れた一般論を実験で示そうとしていたらメンデルは失敗していただろう。
+このように、純系を作るという行為を行うためには、実験の前に自分が何を示そうとしているのか、を理解しなくてはいけない。純系を作った、という事実は、メンデルがこの実験を行って始めて3法則に気づいたのではなく(例えば、たまたま庭に咲いていたメンデルの花を愛でていたらふと気づいたということではなく)、3法則を示すためにこの実験を意図したことを示している。
 
-それは、ガリレオが摩擦のない世界では物体が永久に等速直線運動を続けることを示したことと良く似ている。メンデルは、複雑な現実世界から本質を抽出(TODO:もっとかっこいい言葉を!)した。つまらないほどシンプルなケースだけしか説明できないということはメンデルの偉大な選択の結果である。その本質的な世界だけに集中することで粒子説を実験的に証明できたのだから。メンデルは遺伝子1つで形質が決まるという例外的な状況を使って遺伝の本質を実証したのだ。
+さて、純系を作ることから、最終的にF2においてD:R=3:1となるまで、実験を計画できたので、あとは実験して証明することだ！
 
-最後に、メンデルの法則はどこへつながっていくんだろうか。私が中学校でメンデルの法則を習った時、染色体にのった遺伝子は減数分裂を経て、子供に引き継がれる、というようなふうに習ったけれど、今までの話で分かるように、メンデルが示したもののなかに、染色体とか減数分裂と言った実体はない。
+[TODO: 実験デザインのまとめ]
 
-メンデルは遺伝子に対応する実体が何なのかは全く示していない。あくまで、不変で個別な遺伝子というunitなる概念を使えば、エンドウの実験でおきたような事象を、うまく説明できるということだ。
+こうして解釈し直してみると、前に先走って言ったように、 ①の事実は本当はメンデルの偉大さを表すものだと思う。メンデルはシンプルなケースを意図的に選択したんだ。もし最初から量的形質を考慮に入れた一般論を実験で示そうとしていたらメンデルは失敗していただろう。つまらないほどシンプルなケースだけしか説明できないということはメンデルの偉大な選択の結果なんだ。ガリレオが摩擦のない世界では物体が永久に等速直線運動を続けることを見抜いたように、メンデルは遺伝子1つで形質が決まるという、例外的な状況を使えば、粒子説の正しさを実証することができることを見抜いていたのだと思う。
 
-では、遺伝子には実体は何なのか？それとも、遺伝子には実体などないのか？つまり、位置エネルギーのように、説明概念としては有効だけれども、私達が触れられるものとしてどこかに実体があるわけではない、そういう種類のものなのか？
+(Fin)
 
-答えはもちろん実体がある！遺伝子は位置エネルギーのような抽象物ではないのだ！それを決定的に示したのが、モーガンであり、遺伝子が細胞の染色体にあることを示し、そののち、ワトソン・クリックが染色体上のDNAこそが遺伝子の実体であることを示した。実体があるものならば操作ができる。こうして我々は自身の遺伝子も改変する時代を生きている(例えば)。
+## いくつかのおまけ
+### 独立の法則に関する実験
 
-この遺伝子の実体をめぐる旅は、モーガン、エイブリー、そしてワトソン・クリックへと続き、最終的には、染色体上にあるDNAが遺伝子の実体であることが結論付けられる。こうして
+上で紹介した実験は、メンデルが実際に行った実験の1つであるけれど、1つの形質のみに着目しているものであり、独立の法則は関係していない。独立の法則が関係するのは、さらに別の実験で、異なる2つの形質についての純系(AABBとaabb)を作って、これらをかけ合わせてF1(AaBb)を作り、さらにこれらをかけ合わせて、F2が次の表のようになって、整数比が現れることを示せば良い。これは独立の法則自体の実証にもなるし、粒子説をさらにゆるぎのないものにするだろう。
 
-メンデルが提唱したのは、抽象的な遺伝子という単位だった。遺伝子もそういう説明概念なのだろうか？
-答えはもちろんノー。最終的には、モーガンが決定的に示したように遺伝子は細胞の染色体にある。つまり、これは私達が、遺伝子というものをmanipulateできる可能性を示唆している。実際、モーガンの発見は現代遺伝学を樹立し、その発見から100年が経とうとする現在では、ヒトの遺伝子治療が行われている。
+[TODO: 図 openstaxのものを使う]
 
+メンデルは、異なる3つの形質についても同じ実験(AABBCCとaabbccを作って、F1:AaBbCcを作り、これらをかけ合わせる実験)を行っている。そして、メンデルがこの実験を行うために選んだ2,3の形質は*たまたま*全て別の染色体上にあったことが現在分かっている。もし別の染色体上になければ連鎖が起こって独立の法則は示せなかっただろう。これが*たまたま*なのか、これもメンデルの選択の結果なのだろうか(つまり連鎖が起こらない形質を選び抜いたのか）？
+
+### メンデルの3法則は同等ではない
+
+このように見ていくと、メンデルの3法則は、3つが並立に並べられることが多いけれど、分離の法則は、ほとんど粒子説の帰結で、一般的な法則だ。一方で、優性の法則や独立の法則は最もシンプルな対立形質についてのみ当てはまる話だ。だから、分離の法則は成り立たないことが例外的だけれど、優性の法則や独立の法則は成り立つことが例外的なものだ。もちろん、これがうまいこと成り立っているエンドウを使って粒子説を実証する実験ができたわけだから、この2法則も重要ではあるけれどね。
+
+こういう普遍性の程度の区別は重要だと思う。例えば運動方程式と動摩擦・静止摩擦の法則が同じくらい普遍的だと思っている人を見たら、この人は物理について何も分かっていないと思うでしょ。彼らは運動方程式が成り立たない状況と、動摩擦・静止摩擦の法則が成り立たない状況に対して同じくらい驚くのだろうから。
+
+### メンデルの法則はどこへ繋がるか？
+
+最後に、メンデルの法則はどこへつながっていくんだろう？僕は中学校で、染色体上の遺伝子は減数分裂を経て、子供に引き継がれる、というふうに教わった。これは全く間違っていないけれど、今までの話で分かるように、メンデルが示したもののなかに、染色体とか減数分裂といった実体はない。
+
+メンデルは遺伝子に対応する実体が何なのかは全く示していない。あくまで、不変で個別な遺伝子という概念(粒子説)を使えば、エンドウの実験事実を、うまく説明できるということだ。
+
+じゃあ、遺伝子の実体は何だ？というのが次なる疑問だろう。わたしたちは、どこに遺伝子を持っているのか。
+
+いや、遺伝子には実体がない可能性だってある？例えば、位置エネルギーのように、説明概念としては有効だけれども、私達が触れられるものとしてどこかに実体があるわけではないのかもしれない。
+
+答えはもちろん実体がある！遺伝子は位置エネルギーのような抽象物ではない！それを決定的に示したのがモーガンで、彼は遺伝子が細胞の染色体にあることをつきとめた。そして、そののち、ワトソン・クリックが染色体のなかでもDNAこそが遺伝子の実体であることを示した。
+
+実体があれば操作ができる。こうして我々は自身の遺伝子も改変するようになったんだね。
+
+### メンデルはどこからアイデアを得たのかについての面白い(仮定)話
+
+メンデルは粒子説を無から創造したわけではない。そこにはもちろん先行研究やらはあったのだろう。けれど、粒子説を発展させてアレルの考えを導くのは容易なことではないように思う。
 
 ここで、この時代知られていた、もう一つの最新理論を紹介しよう。それはドルトンの原子説だ。
 
@@ -188,14 +275,23 @@ Maybe... だから、現実はこうかもしれない。
 この主張が正しいのかはさておき、この時代の最先端の理論である原子説から、メンデルが発想を得たことは、あり得た世界線として記憶に値するように思う。
 
 
+(TODO: 参考文献)
 
 
----------------------------
 
-- この実験デザインにおいては独立の法則は関係していない(1つの形質のみに着目しているので)。独立の法則が関係するのは、異なる2つの形質についての純系(AABBとaabb)を作って、これらをかけ合わせてF1(AaBb)を作り、さらにこれらをかけ合わせて、F2が次の表のようになって、整数比が現れることを示せば良い。これは独立の法則自体の実証にもなるし、粒子説をさらにゆるぎのないものにするだろう。
-- メンデルの3法則は、並立に並べられているけれど、こうしてみると分離の法則は粒子説から、かなり最初の方に出てきた、一般的な法則であり、優性の法則や独立の法則は最後に出てきた、実験をデザインするためのあり得る最もシンプルなケースの仮定。だから、分離の法則は成り立たないことが例外的だけれど、優性の法則や独立の法則は成り立つことが例外的なものである。
 
----------------------------
+
+
+この遺伝子の実体をめぐる旅は、モーガン、エイブリー、そしてワトソン・クリックへと続き、最終的には、染色体上にあるDNAが遺伝子の実体であることが結論付けられる。こうして
+
+メンデルが提唱したのは、抽象的な遺伝子という単位だった。遺伝子もそういう説明概念なのだろうか？
+答えはもちろんノー。最終的には、モーガンが決定的に示したように遺伝子は細胞の染色体にある。つまり、これは私達が、遺伝子というものをmanipulateできる可能性を示唆している。実際、モーガンの発見は現代遺伝学を樹立し、その発見から100年が経とうとする現在では、ヒトの遺伝子治療が行われている。
+
+
+メンデルは、複雑な現実世界から本質を抽出(TODO:もっとかっこいい言葉を!)した。その本質的な世界だけに集中することで粒子説を実験的に証明できたのだから。メンデルは遺伝子1つで形質が決まるという例外的な状況を使って遺伝の本質を実証したのだ。
+
+
+
 
 
 まず、優性の法則から純系を作らなければならないことが分かる。
