--- a/_ja/C メンデルの法則 3.md
+++ b/_ja/C メンデルの法則 3.md
@@ -33,15 +33,16 @@ layout: post
 
 ## メンデルの法則は質的形質しか説明できない
 
-translate next 
+Translate the following Japanese text into English, maintaining the original meaning and tone as accurately as possible, while 
 
-メンデルの法則って覚えている？
 
-エンドウ豆のシワとか、花の色とか、F2とか、そういう話。(もちろん、分離の法則とか優性の法則を思い出してくれてもいい！これらの法則の詳細は後でやるので気にせずに) 
+Translate the following Japanese text into English.
+You must not significantly change the meaning of the sentences, but it is acceptable to make them sound natural in English. Please ensure the sentences are simple, easy to read, and clear.
 
-ひとまずは、どのように遺伝が起きるかを説明する法則だったことを思い出してくれればいい。
+メンデルの法則を覚えていますか？学校では、メンデルが行ったエンドウ豆に関する実験を中心に学習します。
 
-でもエンドウ豆のことに、真剣な価値を見いだせる人って少なくない？どうして教科書はメンデルの法則を説明するときに、そんなトリビアルな例を挙げるんだろう？もっと重要でハッとさせるようなものでメンデルの法則を説明してくれたら、楽しめるかもしれないのに。。
+
+ですが、エンドウ豆がしわになるか、花の色が何色になるか、ということに価値を見いだせる人は少ないでしょう。どうして教科書ではメンデルの法則を説明するときに、そんなトリビアルな例を挙げるのでしょうか？もっと重要でハッとさせるものでメンデルの法則を説明してくれたら、私達は楽しめたかもしれません。
 
 これには、メンデルがこの法則を発見するためにエンドウを用いたということも、もちろん関係している。けれど、もっと大きな理由はメンデルの法則それ自体で説明できる事例にあまり面白いものがないということだ[^1]。多分、メンデル以外に見たことがある例と言えば、(TODO: ほかの例 ショウジョウバエやヒトに関して当てはまる例など)
 
@@ -70,7 +71,6 @@ Do you remember Mendel's laws?
 まずは、*ある主張*とは何かについて説明しよう。そのためには、メンデルが生きた時代に一般的だった遺伝に関する考えを説明したほうがいいと思う。
 
 まず遺伝という概念、つまり，親から子供に何かが渡されることで、親と子供が似た特徴(形質)をもつ、ということはメンデルの時代のはるか昔から認識されていた。
-The concept of heredity, which states that traits are passed down from parents to children through genetics, was recognized long ago in Mendel's time.
 
 そして、メンデルの時代には、遺伝が起きるメカニズムは、父と母それぞれから、形質を決めるどろどろの何か(これが遺伝子ということになる)が提出され、2つが混じり合うことで、子の遺伝子となり、子の形質が決まる、というのが一般常識だった。
 
@@ -85,7 +85,7 @@ The concept of heredity, which states that traits are passed down from parents t
 
 ということになる。
 
-けれど、これでは例えば隔世遺伝は説明がつかない。祖父が金髪で、父(祖父の子としよう)と母が茶髪のとき、子供が金髪になりうる、ということを人類は経験的に理解している。しかし、父と母の形質のちょうど中間しか生まれないなら、これはおかしい。子供には祖父が持っていた遺伝子が受け継がれたと考えるのが自然だが、もし混合説が正しいのなら、1.の事実から祖父の遺伝子はもはや残っていないので、子に渡されることはない、ということになる。
+けれど、これでは例えば隔世遺伝は説明がつかない。祖父が金髪で、父(祖父の子)と母が茶髪のとき、子供が金髪になりうる、ということを人類は経験的に理解している。しかし、父と母の形質のちょうど中間しか生まれないなら、これはおかしい。子供には祖父が持っていた遺伝子が受け継がれたと考えるのが自然だが、もし混合説が正しいのなら、1.の事実から祖父の遺伝子はもはや残っていないので、子に渡されることはない、ということになる。
 
 もっと重要な事実の説明がつかないことも当時知られていた。ダーウィンの進化論で重要な役割を果たす自然選択だ。メンデルが3法則を発表する少し前、ダーウィンの『種の起源』が発表されている
 [^2]。そしてメンデルも、ダーウィンの進化論を知っていたことが知られている。
@@ -99,10 +99,6 @@ The concept of heredity, which states that traits are passed down from parents t
 粒子説であれば、隔世遺伝は、祖父の遺伝子が父のなかにも残っていて、子供にそれが渡されたと考えれば説明できそうだ。
 
 しかし、粒子説は進化論が要請するような種の多様性を確保できるのか？遺伝子が変化しなかったら、親と子は全く同じになってしまわないか？直観的にはそう思うかもしれない。ひとまずは、もし粒子説が正しいなら事態はどうなっているはずかを考えていくことにしよう。[^私達は粒子説が正しいと知っているから突き進むことができるけれどメンデルが進むことができたのはどうしてだろう？もしかしたらドルトンの原子説を参考にしたのかもしれない]
-
-遺伝子がdiscrete unitだと何が嬉しいのだろう。
-
-混合説では、somethingもmuddyだったし、説自体もmuddyだった。
 
 ## 粒子説をrefineしていこう！
 
@@ -214,7 +210,7 @@ Maybe... だから、現実はこうかもしれない。
 
 メンデルの実験が成功した理由の1つに純系を作成したことが挙げられる。純系とはAA,aaのような遺伝子型をもったもので、これらはAA同士,aa同士で交配させ続けても、常に同じ表現型を示す。
 
-そしてAAとaaをかけ合わせると、雑種1世代目(F1)は、全てAaとなり、優性の方の性質を示す。そして、F1同士を組み合わせると、AA:Aa:aa = 1:2:1となり、D:R=3:1が現れる。隔世遺伝のメカニズムを説明するだけでなく、このような整数比でF1とF2が現れることがメンデルの法則の正しさ、ひいては粒子説を証明することになる。
+そして遺伝子型AAとaaをもつエンドウ(P)をかけ合わせると、雑種1世代目(F1)の遺伝子型は全てAaとなり、優性の方の性質を示す。そして、F1同士をかけあわせて生まれたF2dの遺伝子型は、AA:Aa:aa = 1:2:1となり、優性と劣勢の性質が3対1で現れる。これは、隔世遺伝のメカニズムを説明するだけでなく、このような整数比でF2に現れることがメンデルの法則の正しさ、ひいては粒子説を証明することになる。
 
 [TODO:図 openstaxの図を使う ]
 
@@ -224,11 +220,17 @@ Maybe... だから、現実はこうかもしれない。
 
 こうなるとF1のいくつかは劣性の形質を示し、F2に整数比は現れない。もちろん、粒子説が誤っているのではなく、優性の法則を考慮しない実験デザインに誤りがあるのだけどね。
 
-どうすれば、純系が作れるだろうか？単に同じ形質を示すものを交配し続ければいい。そうすれば、最初はAaが混じっているだろうが、だんだんと集団内でAaの割合は小さくなっていく。完全に取り除くことはできないかもしれないが、仮に100体のうち、1つがAaでも、計算すれば　となり、無視できる。つまり、統計的純系になっているということだ。メンデルの3法則を使えば、最初のAaの割合(これは知ることはできないから仮定する、もっとも多い場合で100%)と、目標とするAaの混在割合をもとに、何回交配すれば、統計的純系を作れるかを数学的に計算できる。[TODO: 実際計算してみてもいいかも]
+純系を作ること無しには、そこから意味を見いだすことのできる秩序を作ることはできない。
+
+どうすれば、純系が作れるだろうか？単に同じ形質を示すものを交配し続ければいい。そうすれば、最初は優性の性質を示すものの中にAaが混じっているだろうが、交配を繰り返していくと、だんだんと集団内でのAaの割合は小さくなっていく。Aaを完全に取り除くことはできないが、仮に100体のうち、99がAAで、1つだけAaである場合、これを100体のaaと交配すると、Aaの割合はX%となり、無視できる量となる。つまり、統計的純系になっているということだ。メンデルの3法則を使えば、最初のAaの割合(これは知ることはできないから仮定する、もっとも多い場合で100%)と、目標とするAaの混在割合をもとに、何回交配すれば、統計的純系を作れるかを数学的に計算できる。[TODO: 実際計算してみてもいいかも]
+
+どうすれば、純系が作れるだろうか？優性の法則から考えれば、劣性の性質を示すものは必ずaaをもっているので純系を作るのは容易だ。AAの純系を作るには、優性の形質を示すものを交配し続ければいい。そうすれば、最初は優性の性質を示すものの中にAaが混じっているだろうが、交配を繰り返していくと、だんだんと集団内でのAaの割合は小さくなっていく。Aaを完全に取り除くことはできないが、仮に100体のうち、99がAAで、1つだけAaである場合、これを100体のaaと交配すると、Aaの割合はX%となり、無視できる量となる。つまり、統計的純系になっているということだ。メンデルの3法則を使えば、最初のAaの割合(これは知ることはできないから仮定する、もっとも多い場合で100%)と、目標とするAaの混在割合をもとに、何回交配すれば、統計的純系を作れるかを数学的に計算できる。[^実はこのプロセスは劣性遺伝病の1つのモデルと見ることもできる。しかしこれでは劣性遺伝病は単調減少することになる。2024年現在これらの病気が単調減少している途中のかpersistしているのかはわからないが、persistする原因には様々なものが挙げられている(劣性遺伝病が蔓延するか？)]
 
 [TODO:図 Aaから純系を作るまでを図示]
 
-このように、純系を作るという行為を行うためには、実験の前に自分が何を示そうとしているのか、を理解しなくてはいけない。純系を作った、という事実は、メンデルがこの実験を行って始めて3法則に気づいたのではなく(例えば、たまたま庭に咲いていたメンデルの花を愛でていたらふと気づいたということではなく)、3法則を示すためにこの実験を意図したことを示している。
+このように、メンデルが純系を作ったという事実は、メンデルが実験の前に自分が何を示そうとしているのか、を理解していたことを意味している。
+
+彼は、この実験を行って始めて3法則に気づいたのではなく(例えば、たまたま庭に咲いていたメンデルの花を愛でていたらふと気づいたということではなく)、3法則、そして粒子説を示すためにこの実験を意図したことを示している。
 
 さて、純系を作ることから、最終的にF2においてD:R=3:1となるまで、実験を計画できたので、あとは実験して証明することだ！
 
