--- a/_ja/現代アートにならう.md
+++ b/_ja/現代アートにならう.md
@@ -36,7 +36,7 @@ layout: post
 
 さて、学校で習うことの面白さの話に移ろう。
 
-僕が主張したいのは、学校で習うことの多くも、現代アート的と状況を一にしているということだ。
+僕が主張したいのは、学校で習うことの多くも、現代アートと状況を一にしているということだ。
 
 つまり、学校でならう多くのことは、キミにはまるで男性用小便器のように見えて、どう面白さや価値を見出せばいいか分からないかもしれない。けれど、そこにある観点、有効な解釈が与えられれば、それは『泉』になり得るということだ。
 
