--- a/_ja/メンデルの法則.md
+++ b/_ja/メンデルの法則.md
@@ -4,16 +4,25 @@ date: 2024-07-22 14:30:00 +0900
 layout: post
 ---
 ## メンデルの法則はそれ自体が重要なのではない(という視点で考えてみると面白いかも)
+[癌を理解する](癌を理解する.md)
 
-メンデルの法則は、オーストリアの司教である[グレゴール・ヨハン・メンデル](https://www.wikiwand.com/ja/%E3%82%B0%E3%83%AC%E3%82%B4%E3%83%BC%E3%83%AB%E3%83%BB%E3%83%A8%E3%83%8F%E3%83%B3%E3%83%BB%E3%83%A1%E3%83%B3%E3%83%87%E3%83%AB)によって1865年に報告された3つの法則(分離の法則、独立の法則、優性の法則)だ。
+$$f(x)=yt\dot{u} \tag{1}$$
 
-ここではメンデルの3法則それ自体の説明は省略する。ほかの良くまとまったリソースを参照してほしい。
+という関係を考えてみよう。この場合、もっと純粋に違う存在が出せるのかもしれない。そこで、次の仮定をおいてみる。
+
+$$ y=min(t\dot{u}) \tag{1}$$
+
+ここで、もっとも遠い存在はなかったことになる。■
+
+- そもそも違うという可能性
+- あ
+{: .note}
+
+メンデルの法則は、オーストリアの司教である[グレゴール・ヨハン・メンデル](https://www.wikiwand.com/ja/%E3%82%B0%E3%83%AC%E3%82%B4%E3%83%BC%E3%83%AB%E3%83%BB%E3%83%A8%E3%83%8F%E3%83%B3%E3%83%BB%E3%83%A1%E3%83%B3%E3%83%87%E3%83%AB)によって1865年に報告された3つの法則(分離の法則、独立の法則、優性の法則)だ。ここではメンデルの3法則それ自体の説明は省略する。ほかの良くまとまったリソースを参照してほしい。
 
 メンデルの法則が便器[^1]に見えてしまう一因は、この法則が説明されるとき、エンドウの豆のシワとか、花の色とか、ほとんどの人間には何の価値も見いだせないことが例に挙がることだろう。
 
-エンドウが例に選ばれるのは、メンデル自身がこの3法則を示すための実験に採用した植物である、というのも理由の1つだろうけれど、それだけでなく、メンデルの法則だけを使って、きっぱりと説明できる基本的な例には、エンドウくらいしか良いものがないということも関係している。
-
-これはおかしなことのように思うかもしれない。だって、教科書に載るような重要な法則が、どうして、そんな、くだらないものしか説明できないんだ？
+エンドウが例に選ばれるのは、メンデル自身がこの3法則を示すための実験に採用した植物である、というのも理由の1つだろうけれど、それだけでなく、メンデルの法則だけを使って、きっぱりと説明できる基本的な例には、エンドウくらいしか良いものがないということも関係している。これはおかしなことのように思うかもしれない。だって、教科書に載るような重要な法則が、どうして、そんな、くだらないものしか説明できないんだ？
 
 これに対する解答には2通りある。
 
@@ -22,6 +31,7 @@ layout: post
 
 1)は注目するところが間違っているという主張で、2)は学校では習わないけれど、もう少し勉強すれば面白くなるという主張だ。ここでは1)に注力することにしよう。
 
+<hr>
 
 ## メンデルの法則が本当に示そうとしたこと
 
@@ -33,7 +43,6 @@ layout: post
 そして、メンデルの時代には、遺伝が起きるメカニズムは、父と母のそれぞれから、形質を決めるどろどろの何か(これが遺伝子ということになる)が提出され、それが混じり合うことで、子の遺伝子となり、子の形質が決まる、というのが一般常識だった。
 
 状況を整理しよう。メンデルが生きた時代、そしてもっともっと前から、遺伝は認識されていた。しかし、その遺伝がおきる
-
 
 
 
@@ -57,7 +66,7 @@ layout: post
 
 この問題は、遺伝子をdiscrete unit、つまり遺伝子は、変化することなく子孫に伝えられるものだとすれば解決できる。ここでは、人々の多様性は、多様などろどろの塊としてではなく、遺伝子の組み合わせの多様性によって説明される。これを粒子説という。実際、隔世遺伝については、
 
-
+<hr>
 ## 粒子説からメンデルの3法則を演繹する
 
 じつは粒子説さえ思いつけば、メンデルの3法則はオッカムの剃刀的に導かれる。
@@ -70,6 +79,8 @@ layout: post
 
 ということで、3法則は、遺伝子が混じり合わない不変のユニットだという前提から、自然に導出できる。そして、重要なのは、もし3法則が成り立つのであれば、それは粒子説を強く実証しているということだ。なぜなら、もし遺伝子がどろどろの塊なのであれば、3法則は成り立たず、それゆえ例えばF2において、顕性:潜性 = 3:1 というようなきれいな整数比が現れるわけがないのだから。3法則が成り立つのであれば、遺伝子はdiscreteで不変なユニットとして存在している以外考えられない。
 
+<hr>
+
 ## なぜエンドウか？
 
 しかし、この3法則が成り立っていることを示すためには、質的形質をもつ生物を見つけなければならない。私達が遺伝が重要な役割を果たすと考える(例えば親ガチャという言葉から連想される)形質は、非常に多くの遺伝子の影響を受ける量的な形質であるから、F2において、顕性:潜性 = 3:1 というようなことは起こらない。
@@ -80,6 +91,7 @@ layout: post
 
 - メンデルは育種家(人工的な交配や選別を通じて品種改良する人)としての側面、そして数学や物理の素養を背景に持っていたから、もし遺伝子がdiscrete unitであれば、アンサー2)で説明したように、有用な量的形質を得る方法を定量的に分析できる、と考えたのかもしれない。
 
+<hr>
 ## メンデルはどこからアイデアを得たのか
 
 最後に、この隔世遺伝についてメンデルはどうアイデアを得たのだろうか。一つの興味深い主張は、原子説からの連想だというものだ。メンデルの時代には、すでにドルトンの原子説が広く知られていた。
