--- a/_ja/癌を理解する.md
+++ b/_ja/癌を理解する.md
@@ -3,7 +3,7 @@ title: 癌を理解する
 date: 2024-09-07 22:49 +0900
 layout: post
 ---
-他の書物を読むと，誤差の種類についてもっと詳しく分類してあるものもあれば，かなり大雑把に分類してあるものもあるだろう．
+他の書物を読むと，誤差の種類についてもっと詳しく分類してあるものもあれば，かなり大雑把に分類してあるものもあるだろうね．でもそこは御愛嬌ということで。
 
 測定誤差と統計誤差ははっきり区別ができないことも多いので 測定誤差を統計誤差に含めてひとまとめに論じることもある．その時には 偶然誤差という言葉と統計誤差という言葉に差はないだろう.例えば,手持ちの教科書などに「誤差には系統誤差と統計誤差がある」という表現がしてあっても間違いだと考えるべきではないということだ.過失誤差のことを忘れてるじゃないか,と思うかもしれないが,その人にとっては過失誤差は「当然有り得るものだと知ってはいるけれども,有ってはならないものだから、わざわざ論ずるには足らない」という厳しい態度を取っているのだろう.実験の状況によっては,過失誤差を系統誤差か偶然誤差の中に分類してしまうこともある。
 
