コペルニクス

--- a/_ja/D1-11-1.md
+++ b/_ja/D1-11-1.md
@@ -57,3 +57,10 @@ layout: post
 しかしそれは先の話であり、ここでコペルニクスが十分に説明することができたのは、とりわけ惑星の見かけの逆行および留、またこれらの天体の見かけの等級の変化(それはとくに火星においていちじるしい)だけであり、そのほかの不規則性の説明には、プトレマイオスがそうしたのと同様に、離心円と周転円に頼るほかなかった。
 
 私たちは、新しい真理も、発見された当初には、あまり完全であった例がないのを知っている。それはふつう個人の頭脳から出てくるのではなくて、ある時代の精神の成果として、何人かの、ときには多数の科学者や思想家の努力から出てくるのである。
+
+
+コペルニクスは、自身の説の正しさを決定的に証明することはできなかった。彼はただ地動説はものごとを非常に簡潔に説明するという点を、押し出したにすぎなかった。地球が公転しているならば、恒星の位置が見かけ上変化するはずだという批判に対して、彼は恒星が非常に遠くにあり、地球の軌道の直径は無視できるほど小さいと仮定することで弁明した。コッペルニクスの反論の唯一の根拠は理性的根拠であった。
+
+彼は、「地球が自転していると考える方が、すべての惑星、彗星、恒星が24時間ぴったりで地球を1周すると考えるよりも合理的である」と述べた。地球の自転や公転の直接的な証明は、のちの諸世紀において与えられ、これによりコペルニクスの説は不動の真理として確立された。
+
+また、彼はアリスタルコスと同様に、太陽が他の天体よりもはるかに大きいと主張し、月、地球、太陽の大きさの比を1:43:6937と計算した。さらに、太陽までの距離を地球半径の1197倍と推定したが、これは実際の値とは大きく異なっていた。正確な数値が見いだされたのは、18世紀に金星の太陽面通過の観測によるものであり、コペルニクスの推定値の約20倍であった。
