--- a/_ja/D1-11-1.md
+++ b/_ja/D1-11-1.md
@@ -64,3 +64,6 @@ layout: post
 彼は、「地球が自転していると考える方が、すべての惑星、彗星、恒星が24時間ぴったりで地球を1周すると考えるよりも合理的である」と述べた。地球の自転や公転の直接的な証明は、のちの諸世紀において与えられ、これによりコペルニクスの説は不動の真理として確立された。
 
 また、彼はアリスタルコスと同様に、太陽が他の天体よりもはるかに大きいと主張し、月、地球、太陽の大きさの比を1:43:6937と計算した。さらに、太陽までの距離を地球半径の1197倍と推定したが、これは実際の値とは大きく異なっていた。正確な数値が見いだされたのは、18世紀に金星の太陽面通過の観測によるものであり、コペルニクスの推定値の約20倍であった。
+
+コペルニクスは『天体の回転について』の最初の刷り上がりを、死の間際に見たと言われている。しかし、この書が世に出た当初、その中に述べられた見解の重要性に対して期待されてよいはずの評判は、ほとんど起こらなかった。それにはいくつかの理由がある。当時の天文学界は、この新しい理論にはほとんど注目せず、コペルニクスと親しい少数の天文学者を除いて、多くは依然としてプトレマイオス説を支持していた。さらに、当時は教授が自由に教えられる環境ではなく、旧説を教える義務もあった。
+
